# noisemaker

./: LICENSE  OlsenNoise.py  README.md  noisemaker.py  setup.cfg
test/: test_olsen_noise.py
