[metadata]
name = noisemaker
version = 0.0.1
description = Infinite Scoped Deterministic Fractal Noise
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
keywords = fractal, noise, generation, infinite
author = Tatarize
author_email = tatarize@gmail.com
url = https://github.com/tatarize/olsennoise
license = MIT

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
test_suite =  test

[pep8]
max-line-length=100

[bdist_wheel]
universal=1

